Fix: Se agrega endpoint para cambio de constraseña y nuevo repositorio para lenguaje español
